sumo/tests/sumo/errors/traffic_lights/loaded_ok/options.sumo
--no-step-log --no-duration-log -n net.net.xml -a input_additional.add.xml


